[improve][build] Allow building and running tests on JDK 24 and upcoming JDK 25 LTS (#24268)
(cherry picked from commit 5e5bd148caeacda3b386d4bcc807164b25b21aa6)